--- a/support/res/values/attrs.xml
+++ b/support/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2018 The Dirty Unicorns Project
+<!-- Copyright (C) 2014-2016 The Dirty Unicorns Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,30 +14,23 @@
      limitations under the License.
 -->
 <resources>
+    <attr name="preferenceBackgroundColor" format="color" />
 
     <!-- Base attributes available to CustomSeekBarPreference. -->
     <declare-styleable name="CustomSeekBarPreference">
         <attr name="interval" format="integer" />
+        <attr name="min" format="integer" />
         <attr name="units" format="string|reference" />
+        <attr name="unitsLeft" format="string|reference" />
+        <attr name="unitsRight" format="string|reference" />
+        <attr name="defaultText" format="string|reference" />
         <attr name="allowEditText" format="boolean" />
     </declare-styleable>
 
     <!-- Value to pass to callback when restore button is pressed -->
     <declare-styleable name="ColorPickerPreference">
+        <attr name="defaultColorValue" format="integer" />
+        <attr name="ledPreview" format="boolean" />
         <attr name="alphaSlider" format="boolean" />
     </declare-styleable>
-
-    <!-- Base attributes available to CircularImageView -->
-    <declare-styleable name="CircularImageView">
-        <attr name="civ_border" format="boolean"/>
-        <attr name="civ_border_width" format="dimension"/>
-        <attr name="civ_border_color" format="color"/>
-    </declare-styleable>
-
-    <!-- Base attributes available to RowLayout -->
-    <declare-styleable name="RowLayout">
-        <attr name="android:verticalSpacing" />
-        <attr name="android:horizontalSpacing" />
-    </declare-styleable>
-
 </resources>
