--- a/overlay-aosp/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-aosp/common/frameworks/base/core/res/res/values/config.xml
@@ -79,7 +79,7 @@
     <string name="config_defaultAutofillService" translatable="false">com.google.android.gms/.autofill.service.AutofillService</string>
 
     <!-- default dnd acess packages -->
-    <string name="config_defaultDndAccessPackages">com.google.android.GoogleCamera</string>
+    <string name="config_defaultDndAccessPackages">com.google.android.GoogleCameraEng</string>
 
     <!-- non blockable notification packages -->
     <string-array name="config_nonBlockableNotificationPackages">
