vendor: Change com.google.android.GoogleCamera to com.google.android.GoogleCameraEng to support Parrot043 GCam

--- a/rro_overlays/GoogleConfigOverlay/res/values/arrays.xml
+++ b/rro_overlays/GoogleConfigOverlay/res/values/arrays.xml
@@ -90,7 +90,7 @@
         <item>com.google.android.gms</item>
         <item>com.google.android.contacts</item>
         <item>com.google.android.apps.wellbeing</item>
-        <item>com.google.android.GoogleCamera</item>
+        <item>com.google.android.GoogleCameraEng</item>
         <item>com.google.android.googlequicksearchbox</item>
         <item>com.google.android.launcher</item>
         <item>com.google.android.apps.nexuslauncher</item>
