--- a/overlay/common/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/common/frameworks/base/core/res/res/values/config.xml
@@ -126,6 +126,7 @@
         <item>com.caf.fmradio</item>
         <item>com.crdroid.updater</item>
         <item>com.google.android.GoogleCamera</item>
+        <item>com.google.android.GoogleCameraEng</item>
         <item>com.google.android.apps.cameralite</item>
         <item>com.google.android.apps.docs</item>
         <item>com.google.android.apps.maps</item>
