--- a/overlay/common/packages/apps/Settings/res/values/config.xml
+++ b/overlay/common/packages/apps/Settings/res/values/config.xml
@@ -22,10 +22,10 @@
     <bool name="config_storage_manager_settings_enabled">true</bool>
 
     <!-- Settings intelligence package name -->
-    <string name="config_settingsintelligence_log_action">com.google.android.settings.intelligence.contextualcards.CARD_INTERACTION_RECEIVER</string>
+    <string name="config_settingsintelligence_package_name">com.google.android.settings.intelligence</string>
 
     <!-- Settings intelligence interaction log intent action -->
-    <string name="config_settingsintelligence_package_name">com.google.android.settings.intelligence</string>
+    <string name="config_settingsintelligence_log_action">com.google.android.settings.intelligence.LOG_BRIDGE</string>
 
     <!-- Whether memory from app_info_settings is available or not. -->
     <bool name="config_show_app_info_settings_memory">true</bool>
