--- a/overlay/common/packages/apps/Settings/res/values/config.xml
+++ b/overlay/common/packages/apps/Settings/res/values/config.xml
@@ -29,4 +29,7 @@
 
     <!-- Whether memory from app_info_settings is available or not. -->
     <bool name="config_show_app_info_settings_memory">true</bool>
+
+    <!-- Whether to display Cloned Apps page in Settings (Settings > Apps > Cloned Apps).-->
+    <bool name="config_cloned_apps_page_enabled">true</bool>
 </resources>
